--- a/Calculadora Cuadratica/index.css
+++ b/Calculadora Cuadratica/index.css
@@ -2,13 +2,20 @@
     font-size: 16px;
     font-weight: normal;
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #222;
+    color: rgb(50, 49, 48);
+}
+*::selection {
+    background-color: #106ebe;
+    color: #fff;
+}
+#datosEcuacion:hover, .contenedor__funcion-informacion:hover {
+    outline: 1px solid rgb(200, 198, 196);
 }
 span {
     font-family: "Times New Roman",Times,serif;
 }
 body, html {
-    background-color: #e8e8e8;
+    background: #faf9f8;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -20,12 +27,11 @@ body, html {
     display: flex;
     margin: 0px auto;
     text-align: center;
-    border: 2px solid #323232;
+    border: 1px solid #323232;
     border-radius: 0px;
     overflow: hidden;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    border-bottom: none;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 }
 .nav__boton {
     width: calc(500px / 3);
@@ -57,25 +63,26 @@ body, html {
     cursor: pointer;
     margin: 0px;
 }
-.nav__input-radio:checked + .nav__texto {
-    background-color: #323232;
+#btnFuncion {
+    border-left: 1px solid #323232;
+    border-right: 1px solid #323232;
 }
-  
-.nav__input-radio:checked + .nav__texto .nav__span {
-    color: #fff;
+.nav__input-radio:checked + .nav__texto {
+    background-color: #32323244;
 }
 .contenedor {
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
     display: inline-block;
     width: 440px;
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
-    background-color: #e8e8e8;
-    border: 2px solid #323232;
+    background-color: #fff;
     padding: 10px 30px;
+    box-shadow: 0 1.6px 3.6px 0 rgba(0,0,0,.132), 0 0.3px 0.9px 0 rgba(0,0,0,.108);
 }
 .boton {
+    /*
     padding: 12px;
     display: inline-block;
     background-color: #33415577;
@@ -83,23 +90,55 @@ body, html {
     font-size: 15px;
     margin-bottom: 10px;
     border-radius: 6px;
+    */
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    outline: 0;
+    text-align: center;
+    cursor: pointer;
+    padding: 0px 16px;
+    border-radius: 2px;
+    min-width: 80px;
+    height: 32px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(50, 49, 48);
+    font-size: 14px;
+    font-weight: 400;
+    box-sizing: border-box;
+    border: 1px solid rgb(138, 136, 134);
 }
-.boton:active, .boton-enter:active {
+.boton:hover {
+    background-color: rgb(243, 242, 241);
+    color: rgb(32, 31, 30);
+}
+.boton:active, .boton--enter:active {
     transform: translateY(2px);
 }
-.boton-enter {
-    padding: 0 12px;
-    display: inline-block;
-    background-color: #33415577;
-    user-select: none;
-    font-size: 18px;
-    border-radius: 6px;
+.boton--enter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    outline: 0;
+    text-align: center;
+    cursor: pointer;
+    padding: 0px 16px;
+    border-radius: 2px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(50, 49, 48);
+    font-size: 14px;
+    font-weight: 400;
+    box-sizing: border-box;
+    border: 1px solid rgb(138, 136, 134);
     margin-left:auto;
 }
 .input {
     padding: 12px;
-    border-radius: 6px;
-    border: 2px solid #323232;
+    border-radius: 2px;
+    border: 1px solid rgb(138, 136, 134);
     outline: none;
     width: fit-content;
     margin-top: 10px;
@@ -109,16 +148,17 @@ body, html {
 }
 .input:valid {
     border-color: #323232 !important;
+    outline-color: #323232 !important;
 }
-.input::placeholder, .input-chico::placeholder {
+.input::placeholder, .input--chico::placeholder {
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
 }
-.input-chico{
+.input--chico{
+    border: 1px solid rgb(138, 136, 134);
     outline: none;
-    border: 1.5px #aaa;
     width: 60px;
-    border-radius: 0px;
+    border-radius: 2px;
     padding: 0;
     padding-left: 10px;
     font-family: "Times New Roman",Times,serif;
@@ -140,19 +180,26 @@ input[type=number] {
 }
 .contenedor__ecuacion, .contenedor__abc, .contenedor__soluciones, .contenedor__funcion-informacion, .contenedor__puntos {
     padding: 8px 15px;
-    border-radius: 6px;
-    font-size: 20px;
+    font-size: 16px;
     display: inline-block;
     margin: 5px;
     margin-left: 0;
     background-color: #fff;
-    border: 1.5px solid #aaa;
-}
-.contenedor__puntos {
-    border-color: #222;
+    border: 1px solid rgb(237, 235, 233);
 }
 .contenedor__datos {
     display: flex;
+}
+.contenedor__datos div{
+    margin: 0;
+}
+.contenedor__ecuacion {
+    font-size: 18px;
+    display: flex;
+    margin: 0;
+}
+.contenedor__ecuacion i {
+    font-size: 18px;
 }
 #datosFuncion {
     display: flex;
@@ -166,17 +213,15 @@ i {
     font-size: 20px;
     font-style: italic;
 }
-sup,sub{  
-    font-family: "Times New Roman",Times,serif;
-    font-size: 20px;
-    font-style: normal;
-    user-select: none; 
-    font-size: 80%;
-}
-#graficaCanvas {
-    border: 1px solid black;
+.graficaCanvas {
+    border: 1px solid rgb(237, 235, 233);
     width: 400px;
     height: 400px;
+    margin-top: 10px;
+}
+.contenedor__botones {
+    display: flex;
+    gap: 10px;
     margin-top: 10px;
 }
 @media screen and (max-width: 540px){
@@ -190,7 +235,7 @@ sup,sub{
     .contenedor {
         width: calc(90vw - 60px);
     }
-    #graficaCanvas {
+    .graficaCanvas {
         width: calc(90vw - 100px);
         height: calc(90vw - 100px);
     }
