--- a/funcion-cuadratica/estilos.css
+++ b/funcion-cuadratica/estilos.css
@@ -108,6 +108,7 @@ body {
     box-shadow: 0 1px 3px -2px #9098A9;
     font-size: 16px;
     margin: 5px 0;
+    font-family: 'Noto Emoji', sans-serif;
 }
 .button:hover {
     background: #485d93;
@@ -130,4 +131,9 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
+}
+
+@font-face {
+    font-family: 'Noto Emoji', sans-serif;
+    src: url(NotoEmoji.ttf);
 }
