--- a/encontrar-funcion/estilos.css
+++ b/encontrar-funcion/estilos.css
@@ -108,6 +108,7 @@ body {
     box-shadow: 0 1px 3px -2px #9098A9;
     font-size: 16px;
     margin: 5px 0;
+    font-family: 'Noto Emoji', sans-serif;
 }
 .button:hover {
     background: #485d93;
@@ -137,4 +138,9 @@ input[type=number]::-webkit-outer-spin-button {
     flex-direction: row;
     align-items: flex-start;
     gap: 10px;
+}
+
+@font-face {
+    font-family: 'Noto Emoji', sans-serif;
+    src: url(NotoEmoji.ttf);
 }
