--- a/anotador-de-truco/source/css/index.css
+++ b/anotador-de-truco/source/css/index.css
@@ -39,6 +39,7 @@ a{
     font-size: 50px;
     display: inline-block;
     border-radius: 10px;
+    -webkit-tap-highlight-color: #0000;
 }
 
 #nos_buttons{
@@ -90,7 +91,8 @@ input{
     width: 90%;
     margin: 0px 5%;
     padding: 0px;
-    text-align: center;
+    text-align: left;
+    padding-left: 5px;
 }
 
 input:focus{
