--- a/encontrar-funcion/estilos.css
+++ b/encontrar-funcion/estilos.css
@@ -73,10 +73,10 @@ body {
 .input {
     padding: 7px 12px 7px 12px;
     width: 216px;
+    max-width: 45vw;
     border: 1px solid #E8EAED;
     border-radius: 5px;
     background: white;
-    box-shadow: 0 1px 3px -2px #9098A9;
     margin: 5px 0;
     font-size: 14px;
     height: 34px;
@@ -85,6 +85,9 @@ body {
     outline: none;
     border-color: #0077FF;
     box-shadow: none;
+}
+input:disabled {
+  opacity: 0.5;
 }
 .span {
     display: inline-block;
@@ -100,7 +103,9 @@ body {
     margin: 5px 0;
 }
 .button {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 7px 12px;
     border: 1px solid #E8EAED;
     border-radius: 5px;
@@ -109,12 +114,20 @@ body {
     font-size: 16px;
     margin: 5px 0;
     font-family: 'Noto Emoji', sans-serif;
+    width: 34px;
+    height: 34px;
 }
 .button:hover {
     background: #485d93;
 }
 .button:active {
     background: #485d93ef;
+}
+.tools {
+  display: flex; 
+  gap: 5px;
+  max-width: 400px;
+  flex-wrap: wrap;
 }
 .canvas {
     display: inline-block;
@@ -133,11 +146,127 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+/*RADIO INPUT SELECCIONAR TIPO FUNCION*/
+.radio-inputs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 436px;
+    flex-wrap: wrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .radio-inputs > * {
+    margin: 6px;
+  }
+  
+  .radio-input:checked + .radio-tile {
+    border-color: #2260ff;
+    color: #2260ff;
+  }
+  
+  .radio-input:checked + .radio-tile:before {
+    transform: scale(1);
+    opacity: 1;
+    background-color: #2260ff;
+    border-color: #2260ff;
+  }
+  
+  .radio-input:checked + .radio-tile .radio-icon svg {
+    fill: #2260ff;
+  }
+  
+  .radio-input:checked + .radio-tile .radio-label {
+    border-color: #0077FF;
+  }
+  
+  .radio-input:focus + .radio-tile {
+    border-color: #0077FF;
+  }
+  
+  .radio-input:focus + .radio-tile:before {
+    transform: scale(1);
+    opacity: 1;
+  }
+  
+  .radio-tile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+    min-height: 80px;
+    border: 1px solid #E8EAED;
+    border-radius: 5px;
+    background-color: #fff;
+    transition: 0.15s ease;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .radio-tile:before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0.75rem;
+    height: 0.75rem;
+    border: 2px solid #b5bfd9;
+    background-color: #fff;
+    border-radius: 50%;
+    top: 0.25rem;
+    left: 0.25rem;
+    opacity: 0;
+    transform: scale(0);
+    transition: 0.25s ease;
+  }
+  
+  .radio-tile:hover {
+    border-color: #2260ff;
+  }
+  
+  .radio-tile:hover:before {
+    transform: scale(1);
+    opacity: 1;
+  }
+  
+  .radio-icon svg {
+    width: 2rem;
+    height: 2rem;
+    fill: #494949;
+  }
+  
+  .radio-label {
+    color: #707070;
+    transition: 0.375s ease;
+    text-align: center;
+    font-size: 13px;
+  }
+  
+  .radio-input {
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(100%);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
 .contenedor-canvas {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    flex-wrap: wrap;
     gap: 10px;
+}
+
+.fnc-icon {
+    width: 100%;
+    height: 100%;
 }
 
 @font-face {
